fnotation/test/double-annot.output
-- tokens
AIdent a (0:1)
SKeyword : (2:3)
AIdent int (4:7)
SKeyword : (8:9)
AIdent int (10:13)
Nl (13:14)
Eof (14:14)

-- notation
Infix (0:13)
  Infix (0:7)
    Ident a (0:1)
    Keyword : (2:3)
    Ident int (4:7)
  Keyword : (8:9)
  Ident int (10:13)

-- pretty
(a : int) : int

-- messages

error[E0102]: Incompatible precedences
1 | a : int : int
1 |         ^
